# spite

./: .gitignore  Cargo.toml  LICENSE  PHASE1_MSAL.md  PHASE2_STORE.md  PHASE3_SYNC.md  PHASE4_READ_UI.md  PHASE5_SEND.md  PHASE6_SEARCH.md  PHASE7_MANAGEMENT.md  PHASE8A_SETTINGS.md  PHASE8B_RULES.md  README.md  SPITE_KICKOFF.md
.github/workflows/: ci.yml
core/: Cargo.toml
core/src/: auth.rs  compose.rs  config.rs  graph.rs  lib.rs  ops.rs  rules.rs  sanitize.rs  settings.rs  store.rs  sync.rs
core/src/auth/: token_store.rs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: compose.json  default.json
src-tauri/src/: lib.rs  main.rs
ui/: index.html  package-lock.json  package.json  vite.config.ts
ui/src/: App.svelte  app.css  main.ts  tokens.css
ui/src/lib/: AddressField.svelte  BulkBar.svelte  Composer.svelte  FilterChips.svelte  FolderPicker.svelte  FolderTree.svelte  MailContextMenu.svelte  MessageList.svelte  ReadingPane.svelte  RecipientsField.svelte  RichBodyEditor.svelte  RuleActionsBuilder.svelte  RulePredicatesBuilder.svelte  RulesPane.svelte  SearchBar.svelte  SendToasts.svelte  SettingsPane.svelte  Shell.svelte  SignatureSettings.svelte  StatusBar.svelte  StringChips.svelte  mail.svelte.ts  rules.svelte.ts  settings.svelte.ts
