[package]
name = "spite-core"
description = "Spite core: Graph sync, local mail store, secret handling, offline logic"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[dependencies]
keyring = { version = "4.1.2", features = ["apple-native-keyring-store"] }
oauth2 = "5"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
thiserror = "2.0.18"
tokio = { version = "1.52.3", features = ["time", "rt"] }

[dev-dependencies]
tempfile = "3.27.0"
