[package]
name = "spite-core"
description = "Spite core: Graph sync, local mail store, secret handling, offline logic"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[dependencies]
ammonia = "4.1.3"
base64 = "0.22.1"
chrono = { version = "0.4.45", default-features = false, features = ["std", "clock"] }
keyring = { version = "4.1.2", features = ["apple-native-keyring-store"] }
mail-builder = "0.4.4"
oauth2 = "5"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
rusqlite = { version = "0.40.1", features = ["bundled"] }
rusqlite_migration = "2.6.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
thiserror = "2.0.18"
tokio = { version = "1.52.3", features = ["time", "rt"] }
tracing = "0.1.44"

[dev-dependencies]
tempfile = "3.27.0"
tokio = { version = "1.52.3", features = ["macros", "rt-multi-thread"] }
